--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
                         <td>
                             <a href="/edit/<%= nombre.Id %>" class="btn btn-outline-info"><i
                                     class='bx bxs-edit'></i>Editar</a>
-                            <a href="/delete/<%= nombre.Id %>" class="btn btn-outline-danger"><i
+                            <a onclick="confirmar(<%= nombre.Id %>)" class="btn btn-outline-danger"><i
                                     class='bx bxs-trash'></i>Eliminar</a>
                         </td>
                     </tr>
